@@ -1,4 +1,4 @@
-.TH "sbatch" "1" "SLURM 2.0" "March 2009" "SLURM Commands"
+.TH "sbatch" "1" "SLURM 2.0" "April 2009" "SLURM Commands"
 .SH "NAME"
 .LP 
 sbatch \- Submit a batch script to SLURM.
@@ -203,8 +203,9 @@ An arbitrary comment.
 
 .TP
 \fB\-\-contiguous\fR
-Demand a contiguous range of nodes. The default is "yes". Specify
-\-\-contiguous=no if a contiguous range of nodes is not required.
+If set, then the allocated nodes must form a contiguous set.
+Not honored with the \fBtopology/tree\fR or \fBtopology/3d_torus\fR
+plugins, both of which can modify the node ordering.
 
 .TP 
 \fB\-D\fR, \fB\-\-workdir\fR[=]<\fIdirectory\fR>
